# segmentation_api

./: .gitignore  Dockerfile  README.md  client_main.py  main.py  pyproject.toml  requirements.txt  server_main.py
api/: client.py  schemas.py  server.py
config/: configure.py
inference/: segmenter.py
models/: base_model.py  huggingface_sementic_segmentation_model.py  maskrcnn_model.py
segmentation_api/: README.md  api_main.py  client_main.py  main.py  server_main.py
segmentation_api/api/: client.py  schemas.py  server.py  task_queue.py  worker.py
segmentation_api/config/: configure.py
segmentation_api/inference/: segmenter.py
segmentation_api/models/: huggingface_sementic_segmentation_model.py  maskrcnn_model.py
segmentation_api/tests/: produce_stats_concurrent_users.py  test_concurrent_client.py  test_model_cache.py
segmentation_api/utils/: monitor_queue.py  utils.py
tests/: produce_stats_concurrent_users.py
